# SDLTemplate

./: CMakeLists.txt  main.c  main.cpp
SDL2/: CMakeLists.txt  Makefile  Makefile.os2  Makefile.rules  Makefile.w32  SDL2.spec  config.status  configure  configure.ac  libtool  sdl2-config  sdl2-config-version.cmake  sdl2-config.cmake  sdl2-config.cmake.in  sdl2.pc
SDL2/VisualC/SDL/: SDL.vcxproj  SDL.vcxproj.filters
SDL2/Xcode/SDL/: Info-Framework.plist
SDL2/Xcode/SDL/SDL.xcodeproj/: project.pbxproj
SDL2/cmake/: sdlchecks.cmake
SDL2/docs/: release_checklist.md
SDL2/include/: SDL_atomic.h  SDL_config.h  SDL_config.h.cmake  SDL_version.h
SDL2/mingw/pkg-support/cmake/: sdl2-config-version.cmake  sdl2-config.cmake
SDL2/src/audio/ps2/: SDL_ps2audio.c
SDL2/src/dynapi/: SDL2.exports  SDL_dynapi_overrides.h  SDL_dynapi_procs.h
SDL2/src/events/: SDL_mouse.c  SDL_mouse_c.h
SDL2/src/hidapi/libusb/: hid.c
SDL2/src/joystick/: SDL_gamecontroller.c  SDL_gamecontrollerdb.h  SDL_joystick.c  SDL_joystick_c.h  controller_type.c  usb_ids.h
SDL2/src/joystick/hidapi/: SDL_hidapi_combined.c  SDL_hidapi_ps5.c  SDL_hidapi_switch.c  SDL_hidapijoystick.c  SDL_hidapijoystick_c.h
SDL2/src/joystick/iphoneos/: SDL_mfijoystick.m
SDL2/src/joystick/ps2/: SDL_sysjoystick.c
SDL2/src/joystick/windows/: SDL_dinputjoystick.c  SDL_rawinputjoystick.c  SDL_windows_gaming_input.c
SDL2/src/render/: SDL_render.c  SDL_sysrender.h
SDL2/src/stdlib/: SDL_string.c
SDL2/src/video/: SDL_sysvideo.h  SDL_video.c
SDL2/test/: CMakeLists.txt  testgamecontroller.c  versioning.sh
(+28 files in other folders)
